ready for connectathon last checks

--- a/src/test/SMART-test.ipynb
+++ b/src/test/SMART-test.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"e\":\"AQAB\",\"kid\":\"kU3EOUCL5nQqLocgGehYRBMted9yBL5MCAtQJXZSJWg\",\"kty\":\"RSA\",\"n\":\"rpTcVZlAfCJdnPmfZ_9mJXIiz4E-pEQyIT_GR1nWyUwGoZ9VoI_TApcZGv02maZV3VCrOtMsULTFFYEfrPxk1HXrQTChO4b_SlR9LXP_5S6WsqcyVsmuWXUlSh06cMeKAx6aeNPNXe7FjptxqPsrr_VF3SZnyi5EqtgSRpeXvm58HU5fUjKcbUIKDG5YMQfZkk42lGoF_xUHVHv1U-heQm6UiCXKCQ9w0MObk9YezughpXGzuXVosRheMAbQoByAZdn8xIrO5y10CTOowp26Dd5rJx_cgDf8BLf_LewjTeg-P73HegpQ-0SGGiwU5yOisCzzUlg8tM8IyDy0Ud7nLxffqMqKimDaTuWPCWopMQuMSItJRDdtFImSvIogth2JsJpHgZLA8EzNj52qkAbfxoxyHPndqve71q6eYhN_f-_I2QUJAyIZPoLe76b9NPR2yLb3eXs1Mxbk--ztW8kmtDnuuxY1B7CJH-sJB1W8i_fhFXnoE8ipml2c87MdpItTg-4UaE3Gb6f6jUKf3QwGn8dRTLc6VPEctKH0dDM5FoiHuyAyqfiwtZGAQmXV9zUdGa8Shl8OOhbvWcTCg1RG42DOPUYMkNyHcG6fNzE17hkOajxjoSy4ayT-9OZ2PdrhyJJHExwC_w5Y7PkPmmCeaOuejJKPO6jrcYcKHTiC57c\"}\n",
+      "{\n",
+      "  \"token_endpoint\": \"/token\",\n",
+      "  \"token_endpoint_auth_methods_supported\": [\"private_key_jwt\"],\n",
+      "  \"token_endpoint_auth_signing_alg_values_supported\": [\"RS384\", \"ES384\"],\n",
+      "  \"scopes_supported\": [\"system/*.rs\"]\n",
+      "}\n",
+      "{\"kid\":\"wgAVbQIJqZ50OQzOPtmp9h-2nd8-aqGEbZHXuusrMqU\",\"thumbprint\":\"wgAVbQIJqZ50OQzOPtmp9h-2nd8-aqGEbZHXuusrMqU\"}\n",
+      "{\"d\":\"ZesPMm22jrbHnypnP5z9-bEQAJebcOtmSSyLAcZnlgzlU0IeQ7M-0o5bHh5z_HTxrQAVxknvXVIs3JbxOI1-TAjs0QIpHM2x8eWnJV_CeQzn5n54vN3-LR4tT3TbXChj5wbTefPFXtjvUHHq-5L5iE3wATIiZPp65fUWiX1vVhnGsizUcKqiVWBNM9FGjlMMYFRXADK4vjweuCDgfwb6X-PbpnsJp2DMJ8CScjbKHX-X8fJpneoggtj7Kt1MB0TLN7Skrj9tfGByGBWX4iflxvrZqSwjWV1m9Nb5TcfGaaLHQnwcco2coBaiIuCwc2KEu0uoX5IU0G2vl1BKVHjB18aGQsxWBaUp01Fs1U_ayd2vgTEfHObgYY3jE8rXBBKWyc-yGYkvKk_mB6R3DODwAHDcoCPQKFlkxNNY0R5y8t8i6JYByWQ0FKgzypXKdlenvq_U0uf9Hedo7imgKUjpSnNFYfm7bxH9tNIXZUNot4CCPvg6KrmfzHNcAzR8XpQhjsNVtFXWSPJAqdRuInS69tAgW2m0gA3wfee1stEbEeuPuBQ8-uQED6BX3hldIqb1cmYgfoEw83Jk6bA7aTF7vXXWt3tIvUP1CoROscGwU6pXBf28J2DhNFR7awYLOg-b06ambYswD2YfaeiffJ7chJGHOBUIAen4QzUGP6a8TsE\",\"dp\":\"ye0vevhJxRgV3R-jWkTvxlVg4KPyond-CtrtwsUkDddITH2-eGSirOcyNbqeoBhllhETZgUGzrNY0iTxp9MQdtCDE3XtbqMJeG5Wk_cNlNSvoolCvDQBMXadxI9fP1oz1XfIboo8DteKJloTXoUNsNfc8BX6e_XRNhUJOyr3XgZMehkjkvbd_obkX_NHe2rStbPIqHSnkcn7PlNn_cqlS4rBzpHMiymNBntumAFzAgMzg8xMcLSUPqkm-_ujPu4hvcF_EZI7nazCl8c8K4TW8710IVAybJr-FbRqzIGF5d3-JikIhf1rJSKYY-58KNYp-qINKYtgHq_Ua5U8RA4svQ\",\"dq\":\"Ktxe5XgDJFdGnWjOKIXlx0ztQL9IKtrKDk0U-kURGbR5Snsea3NwZbwJrq7nwOLWR2ZFx_pxYJbEtvyse0zW1o5Zni32ef9BTojYug0guOV943ugQT3eR0HUU79yp2Yf0q5cveeWY3qMgIIwB4qKNOVK4cgYzfdebtn-F-vt2MYygH8YxHNhq4ss9PGbbZsO09i2STTkuLkuPfartyWN52prGrt4h_dGsPctrjSoGqYiXpEc8sQdzoVXyGiTFg_MZPy06UOPlJaltYeZfmuoparm6MUku-E75h6-Ul4Pyw3YVt9-0K4dGcDHBNBMLGio-RA80q2bHebOfol_PrTyNw\",\"e\":\"AQAB\",\"kid\":\"wgAVbQIJqZ50OQzOPtmp9h-2nd8-aqGEbZHXuusrMqU\",\"kty\":\"RSA\",\"n\":\"oaaeGER0WuJzBrQoHC3IVL_GapxNLMyMGOYajluNyB6AxOpy7SAVcp_6uW4YdAk1GHI2qNCAts2Olsxj0cxMFz2p0cy2yXjH104esvhduzNndkAhrMYHTiPy_91fOC3_AU46ZEOaA0LAd46RgWZhz5KDozqOyhqqNO9GbBMvwJ0yx0VITIWLhhaEqOftKb4-q5indOIrBx4qdBPHsbwOUSztYNc1mBQlIIskDPGnNQtiS7MMcVPNuRUm1S3jxs7MSFz123Jq7xXykkM1hykjVRsdnWcfNcgxR-ezs0fxopQamV-BAf7OLG4L9FIABnY2NbruE-P5RljrKhRU4jsesJsY_yH7NEd_nEYkGbc81aYbB-DtZZXxjSYssATmnva_C6ts_zW7yIPZJAGUW2C7eM5zdNbsan9nAVZGRcemCfq36s1K2syTHKi5dlYUdVYx1l5qIy6_ThWfl6qqoAmvKCam5id6qTJRKSPCDWi37kFcSN0bqMKWAZljGsKljvtmDZ5HcJ3iKJdDGYB76RvIwedFDK1NyJDdKTF0mqxIEHKagDnwbXu8f7XrueK0SrOsGOfULjfk8P3gbahNB6eZ8KrcKnrpIWBSQCRYLlutr4Pzln_YQv0LLadNFce-i1ijaQ0wtZjybL73O6q1KaBGhSh0D0-3L-5faPHibh__U3c\",\"p\":\"1yLNUKYn2Z64Ng8GmrFBmSKmwH_tpgYrd2qUgXEOfbTKObcGJ9-3wkf4GLldVF_1rCtFd8WfcEec6EPExgjMkJUQaNildK0C9O7lNlaLl4za_I_eITJs0YiY1ObbtWlM-DyehXX7r0LLrJmbpY8o8l5WRbRPGPFEqfDXFCGN1NmRjtDzS3D9lnzFrU4eCKye1IQnHwXUp0H65iVbYCaiNUMOHA6DLFOvR4VmcD3n2fiXFT6sH-qUVDStdx1_zf-ckVL757e1HzXXYCGCjVx6xfEGjLFJy3oFOMFn18ySNQL1hGseA7IDmRifeJbrysGbUIq7-7lXRHS5aRx2HXM-3Q\",\"q\":\"wFsMxusqsXzRQf4iWSluIYfsvuIOYKVLfRDniIwGFEIJsZM4eefXEak2jOvvYJYwG7VFILLWGjF-jKe5UORbSfuM3jYKe40ghAIpLX1OGXVPsaEnlPXFbqw_su5sfpW7rf6xT0MGWOWUuyJaGk5SjzdyDkCF5nGAGawdajf0KV-DBMdhceYybzG1SVcvuN6BrCkPIKUsJyloInI5W2jVik4OOFGKJi2pTDQTzIA5fQPkYk2DExMQ263bUlAJO3ZAj8VFQ1fuVOwkm2ohhNmS8pTGcO7vGdJzlfNrtdEpMvSKtw1V2cOw1EtBS2MnMYDtUzRBwYc-zb0BO7ESvmvUYw\",\"qi\":\"R8g_lD-bWXIguc_4l8QeeU4eoOMtRMEscYzcCdkJ9N8837QKdgVtndjbTvJq6d_iu01uPBJXW1hbpfEIjlpRbhgnhPucPQI1nqK_SbNuEAMnuYe-mX-2bBHws-VPi5WtzXEvbeZXs81eYJBTwqnUjMs3kWiXdEOiR5xmbBJru6jwNF12S5D6PdTwavH_U8x2QUtMRKgbbvQRZDu93EOfT64e5uxpDaalY8Va-O_OC4wAQu72bydhNdZ_f3k-Kg3ipXuvKQUERMNOFPA7IvF-2BVsX2MRgcNae7WPXt-zuVcDj2U4gK-KdGdYeqceZ-pNrtgucUV8PNrTgb4ZUBWISA\"}\n",
       "200\n",
       "b'JWK REGISTERED'\n"
      ]
@@ -27,13 +34,16 @@
     "session = requests.Session()\n",
     "headers={\"Content-Type\": \"application/json\"}\n",
     "alg = \"RS384\"\n",
-    "\n",
+    "config = session.get(baseUrl + \"/.well-known/smart-configuration\")\n",
+    "print(config.text)\n",
     "key = jwk.JWK.generate(kty='RSA', alg=alg, size=2048) \n",
     "# Use following command to generate private key\n",
     "# ssh-keygen -t rsa -b 4096 -E SHA384 -m PEM -P \"\" -f RS384.key\n",
     "with open(\"RS384.key\", \"rb\") as pemfile: \n",
     "    key = jwk.JWK.from_pem(pemfile.read())\n",
-    "print(key.export_public())\n",
+    "# key.update({\"kid\", \"Connectathon\"})\n",
+    "print(key)\n",
+    "print(key.export_private())\n",
     "register = session.post(f\"{baseUrl}/registerClient\", data=key.export_public())\n",
     "print(register.status_code)\n",
     "print(register.content)"
@@ -41,27 +51,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJhbGciOiJSUzM4NCIsImtpZCI6ImtVM0VPVUNMNW5RcUxvY2dHZWhZUkJNdGVkOXlCTDVNQ0F0UUpYWlNKV2ciLCJ0eXAiOiJKV1QifQ.eyJpc3MiOiJjbGllbnQtaWQiLCJzdWIiOiJyZWdpc3RlcmVkLWNsaWVudC1pZCIsImF1ZCI6IiIsImV4cCI6MTcwNDczMDI1OTYzNCwianRpIjoib3pKZTNMbmxHVjJkaTA4cjRoVl9VbFVCc2lGeUpkTUhvb2NWd0d1RDdoSSJ9.UJrmEWpNX0Z4HDLB_aOx20DIzQjBJR-Y6JNL3kPL13d4wONoi66NpQcltTeo-VLEsshubz3ZbqpBkGYSdn6zjy53DbkXC7O34AQAFHwDq9KkvoV5GwxmSsG7znXBsVyjOcJ7RTAF38Ihu_715-uLz1ye5-875_Jz1U54XxaMy9w0XBMhd_LpgHp3Ymt2x_krVClpW3RX4fJsvBSYvlGd94ReNKpeQB3DjKaxYbD74LcTx1I9AnmPZI8g2NgS0bAxK90TKwkbQ64P4nAk-onEj0sYU4OOlRk351I5HkINdffIMknraHZ4XVUWTY1AZPfVMbpW84a5HkR74BUxkmdKbR4Gr3Sl7uX_Qcahs24JIcROm5JYBUhoZRD-pIsXNkiIWtS7RtljOmZU1zoufkfC9BOzflhieNb5bMR7Qb7jTb5wkhFSZNqlO7p_yVEEGWkPlYnABskkc82YJanBVUtlvGpbtg2WRCBdGS5_4HrNFKOq4_Sh8S6PoGPrYKdWboaJiUspSNqvHUONEpbxszmg0B5W-LGU0uPgi2A31NOPMevCEOxxnWOaV-XixaUZxPj4ADy3doqNFZMi7nBBl8IwSLJvkiOx9TF8Zec1XLcZY8uY3tPciw43Hm-kYVFYdZwoWpbFWp8RnMtvGfpLARJt-o7GGd_x2Oa-cku6-KTBKG4\n",
-      "{'iss': 'client-id', 'sub': 'registered-client-id', 'aud': '', 'exp': 1704730259634, 'jti': 'ozJe3LnlGV2di08r4hV_UlUBsiFyJdMHoocVwGuD7hI'}\n",
+      "<Response [401]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "ehrUrl = \"http://localhost:9091/ehr\"\n",
+    "ehrRes = session.get(ehrUrl + \"/smart-test/\" + key.get(\"kid\"))\n",
+    "print(ehrRes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eyJhbGciOiJSUzM4NCIsImtpZCI6IndnQVZiUUlKcVo1ME9Rek9QdG1wOWgtMm5kOC1hcUdFYlpIWHV1c3JNcVUiLCJ0eXAiOiJKV1QifQ.eyJpc3MiOiJjbGllbnQtaWQiLCJzdWIiOiJyZWdpc3RlcmVkLWNsaWVudC1pZCIsImF1ZCI6IiIsImV4cCI6MTcwNTM2NTI0MTgzMSwianRpIjoiRXRvZkVTb015TGR1bi1HQkxJSGJMdDAyTHkwM19kSHBQdE9GNUZmRWtBMCJ9.axZ6OVhH7AbTyUk3e1Ukmb0LWb2Ace9irA1PQt9cf_AiI0vksFryAYbxJvL0Yh5nSH1LJfQMnvW3F1HMK9-uiO2wEr5l05djKxMm3Dt63N7jlbszc8RoY8HUkAqLKRcglC8toGrXPeojCrXA_VfRrhtn9j5j3Vqj8rgaWOdPjsJur5CoV97XtnuYEFoitloBHdhqw6eutiw9D_cM9S0-j9pdxXZICc7eYZ_av0k_Di52U-W2Rzd0amGfIm2NRZQsReygMcnSRWhPXNa9ONF_yQX7MytKJlrE5i28pEbCylJKHWeqc_qDdelO137L6mcl9RYELqNO-VH1KGh8eHbwmG1tXfkSZoxAHfqyX9HiLrkDeSWmxMn8nLFKvnTp5orRyiyDMNPY2aWDFd44VugPbTpnO1u8IweUuzT3UjydQL8TSobeiZWkLS-LLTraD0nJvKlS-m8YtuPwj4UEL9PczcCjSmjcLODqmEiOZAV4_tI1IhgJAf1VYb7SWy5CqYu_9YbKBYx0uJQwBgXJvjJntYelSR1AM1Xl0Kx640nvjVQMxqcJUV-VbpCiKgBXrlkK0D2cA_Ykp0GTPD6ZuafjjhF50SeZwWMMdEG56Lgv0seCdTCwdW0qgBW9k3I2zzecdI3NdsA4KjS6mxcOhR5gNzTYESUY1i9Irf4FR9AsTjY\n",
+      "{'iss': 'client-id', 'sub': 'registered-client-id', 'aud': '', 'exp': 1705365241831, 'jti': 'EtofESoMyLdun-GBLIHbLt02Ly03_dHpPtOF5FfEkA0'}\n",
       "<Response [200]>\n"
      ]
     }
    ],
    "source": [
+    "with open(\"RS384.key\", \"rb\") as keyfile: \n",
+    "    secretKey = keyfile.read()\n",
+    "with open(\"RS384.key.pub\", \"rb\") as keyfilepub: \n",
+    "    publicKey = keyfilepub.read()\n",
+    "\n",
     "jwt_claims = {\"iss\": \"client-id\",\"sub\": \"registered-client-id\", \"aud\": \"\", \"exp\": int(time.time()*1000) + 30000, \"jti\": secrets.token_urlsafe()}\n",
     "jwt_headers = {\"alg\":alg, \"kid\":key.get(\"kid\"), \"typ\":\"JWT\"}\n",
-    "encoded_jwt = jwt.encode(payload=jwt_claims, key=private, algorithm=alg, headers=jwt_headers)\n",
+    "\n",
+    "encoded_jwt = jwt.encode(payload=jwt_claims, key=secretKey, algorithm=alg, headers=jwt_headers)\n",
     "print(encoded_jwt)\n",
-    "decode = jwt.decode(encoded_jwt, public, algorithms=[alg])\n",
+    "decode = jwt.decode(encoded_jwt, publicKey, algorithms=[alg])\n",
     "print(decode)\n",
-    "login = session.post(f\"{baseUrl}/token\", params={\"client_assertion_type\": \"urn:ietf:params:oauth:client-assertion-type:jwt-bearer\", \"client_assertion\": encoded_jwt})\n",
+    "login = session.post(f\"{baseUrl}/token\", json={\"client_assertion_type\": \"urn:ietf:params:oauth:client-assertion-type:jwt-bearer\", \"client_assertion\": encoded_jwt})\n",
     "print(login)\n",
     "token = login.text"
    ]
