Partitioninf fix, code cleaning, docker config change

--- a/src/test/SMART-test.ipynb
+++ b/src/test/SMART-test.ipynb
@@ -50,6 +50,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/interactiveshell.py\", line 3550, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/var/folders/0h/0jwr22yn0tg_r856qtr6n22m002364/T/ipykernel_92038/2288330510.py\", line 1, in <module>\n",
+      "    from hl7tojson import parser\n",
+      "  File \"/opt/homebrew/lib/python3.11/site-packages/hl7tojson/parser.py\", line 14, in <module>\n",
+      "    with open('{}/data/{}/fields.pickle'.format(FILE_PATH, HL7_VERSION)) as f:\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: '/opt/homebrew/lib/python3.11/site-packages/hl7tojson/data/27/fields.pickle'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/interactiveshell.py\", line 2144, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 1088, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 970, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/core.py\", line 677, in included_pieces\n",
+      "    scope_pieces = self.scope_pieces\n",
+      "                   ^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/core.py\", line 614, in scope_pieces\n",
+      "    scope_start, scope_end = self.source.line_range(self.scope)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/core.py\", line 178, in line_range\n",
+      "    return line_range(self.asttext(), node)\n",
+      "                      ^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/executing/executing.py\", line 333, in asttext\n",
+      "    self._asttext = ASTText(self.text, tree=self.tree, filename=self.filename)\n",
+      "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/asttokens/asttokens.py\", line 305, in __init__\n",
+      "    super(ASTText, self).__init__(source_text, filename)\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/asttokens/asttokens.py\", line 47, in __init__\n",
+      "    source_text = six.ensure_text(source_text)\n",
+      "                  ^^^^^^^^^^^^^^^\n",
+      "AttributeError: module 'six' has no attribute 'ensure_text'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hl7tojson import parser\n",
+    "message =  '''MSH|^~\\&|||||20240502084447-0400||VXU^V04^VXU_V04|Z03R1.21r|P|2.5.1|||ER|AL|||||Z22^CDCPHINVS|\n",
+    "PID|1||Z03R1^^^AIRA-TEST^MR||GrantAIRA^ElizabethAIRA^Cody^^^^L|UnionAIRA^AliaAIRA^^^^^M|20200512|F||2054-5^Black or African-American^CDCREC|1176 Woststellingwerf Ln^^Lima Township^MI^48118^USA^P||^PRN^PH^^^734^8634067|||||||||2186-5^not Hispanic or Latino^CDCREC|\n",
+    "PD1|||||||||||02^Reminder/Recall - any method^HL70215|||||A|20240502|20240502|\n",
+    "NK1|1|GrantAIRA^AliaAIRA^^^^^L|MTH^Mother^HL70063|1176 Woststellingwerf Ln^^Lima Township^MI^48118^USA^P|^PRN^PH^^^734^8634067|\n",
+    "ORC|RE||Z03R1.3^AIRA|||||||I-23432^Burden^Donna^A^^^^^NIST-AA-1^^^^PRN||57422^RADON^NICHOLAS^^^^^^NIST-AA-1^L^^^PRN|\n",
+    "RXA|0|1|20240502||03^MMR^CVX|0.5|mL^milliliters^UCUM||00^Administered^NIP001||||||V7634SH||MSD^Merck and Co^MVX|||CP|A|\n",
+    "RXR|C38299^^NCIT|LA^^HL70163|\n",
+    "OBX|1|CE|64994-7^Vaccine funding program eligibility category^LN|1|V05^VFC eligible - Federally Qualified Health Center Patient (under-insured)^HL70064||||||F|||20240502|||VXC40^Eligibility captured at the immunization level^CDCPHINVS|\n",
+    "OBX|2|CE|30956-7^Vaccine Type^LN|2|03^MMR^CVX||||||F|\n",
+    "OBX|3|TS|29768-9^Date vaccine information statement published^LN|2|20120420||||||F|\n",
+    "OBX|4|TS|29769-7^Date vaccine information statement presented^LN|2|20240502||||||F|'''\n",
+    "print(parser.parse(message))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 116,
    "metadata": {},
    "outputs": [
@@ -135,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
