removing accidentally added h2 db files, IPS generation config improved

--- a/src/test/SMART-test.ipynb
+++ b/src/test/SMART-test.ipynb
@@ -2,26 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"token_endpoint\": \"https://bulksandbox.pagekite.me/iis/token\",\n",
-      "  \"token_endpoint_auth_methods_supported\": [\"private_key_jwt\", \"client-confidential-asymmetric\"],\n",
-      "  \"token_endpoint_auth_signing_alg_values_supported\": [\"RS384\", \"ES384\", \"RS512\", \"ES512\"],\n",
-      "  \"scopes_supported\": [\"system/*.rs\"]\n",
-      "}\n",
-      "{\"kid\":\"jWVi44uPpn9Xblv5LztrynJ8jNMU-zi_cOD2A7RL25w\",\"thumbprint\":\"jWVi44uPpn9Xblv5LztrynJ8jNMU-zi_cOD2A7RL25w\"}\n",
-      "{\"d\":\"YNpNk2JN7uLRAlkvYk3zxBSYvxhTDR826uCMp_ul-zHg7yf5ZyRp9G2GLGV50LqpcWlCbDI5AVEJHeQVQnuOJYt6Dkr29mQTa-ciZtYrYONNScIHndo7nNaPmsGIF6EExHDw25YstA8j8apviStLGsAQx6bCtcDls6rDGTtphIh9TrdhTp3TIH_FpXYzgyk8xVt6VOifC2xp_hrDRUb6N8svAYSNCBHHxjGuFO0igGGlzzhmWUg9IQX9s9imtdeLMUJRCXNIkiLNR3OQGqHe48qo-y9s60P2xxml6KsQ-3u1L0u-1xjl7FXBPBz3TlEK_JcutOZi8J_mVMgi6I87J536kEUu50kXivhiVPVDoygzDS1VyS2wa1sWVd9FZezOabDhQrF__S6x05dQ_YDhF9SYPD7wZ1eSRJH-Agq0H5JhA07I_XG41iKNMTCI1pZlX5if9E9EiGXU6fxmLR9sB8FrDPYKOq78Lxk3QUKCoaUfcSQCF9PAnoe2-nNNZ-d8kkTRWx1Y0iHAIRcM0yf7i5QqC6nKDONnLYSdWIpKYe5HuZFA9pOvw5JCQgrPo0J0Rcw7eDim6H4dGxRSMiaY39dRWBP1HQa6_KzoK_stsdoc6q-Xq2J8u2fTSKfmIvpIey2hewBqxO0RA1CxEFNT9tTQyW30MQvv4MtsdcA5DgE\",\"dp\":\"nn2wEMv05w-GPgktvL9uU_kQKzvc-8uoakOap1ZxXCCC3IF27XQ4w1VCqei4F1y-N-A7pQENeHnB6Zi2npJUmOdxLJUh3E7jfHXkC-a3zzBLeHIxL1zbxO2c8qnNd6NZkzTxo817GinsPwds5B1mmQFxi87nGRL7CBy5Y5fw8iH1UNQU1SfT4jpR_N-6dtt209VKvVySoEBKHXSyqrX_CNINZzxmUOGrojTeZjSpqxqw1jgj276LlsKzVfjfuR0FDJkwhRhU2_VMM7YihkPKAbg4--BW5iTVjfZqerDaJVnUhS6-3sTApUf0K3QalTog4LyMgGvPhYUobvvAT2BzWQ\",\"dq\":\"mtxbZUJAWj-POnp6Poo1fs0GxqZArdeWoMJQUo_z2IjB4wA7KzJoQdMP3NXWNg8CIiK3NG8xv1Y-vWF-R4-zkSH7wQrfp5FN7x3MGJVBPxMkWlNSTcb7KBvEdqp4GgXnPJIDVazriP1m7lwF6eMQzgpH9jlc0twUwWz9ln869lCijA3earKzDHY8i9vddJP6kBseHLcV5mPFV7sMunb4V25zrCihMdMhCqgIGzyDfZRSjRwDuNLBVy1y1ytJ9KLlQIqu8KG7LVrZ6IceJIwdyr5tDEbDEm6uKN_W4KEAdFYepzjRjpy-b20lgoc41qAX51SGcfXwNrarbia3IZ0pQQ\",\"e\":\"AQAB\",\"kid\":\"jWVi44uPpn9Xblv5LztrynJ8jNMU-zi_cOD2A7RL25w\",\"kty\":\"RSA\",\"n\":\"uW32CUHy3IyvySdEpGtof61pml-ygKnxq_OVAAon2i_orKw4rmJ4siqSnCK3nbwYeHSikNXd-AsG1buBLp7GgVjZq6JRRcpkWQO0RX7UygCKLrx0wUpyCq5FCY8FBt2-VXaZD52VclbTmwbaFoggpuLh3dlpwj0gQmnXx7CgsyR40X7nkUAY4FHkSyTTDmq4GQKjOxh2T9KSE29fx1viw7IQYiVWWFfjKY30EZV0oAsOB2Pywq_1qLfYKvHctGaVkCV4UkwDPcp-Y-fLwYYJD8EJNHr6mR-cxFTYRMAnDq-HG8KSYKLzjq6MHjrh1VwQWHF1x_aqXr7FdIM7cAm4Vo6NdhgZaLE-5vgsGd1j_gRqKt_0duSjtBOu4FMCW7Ban062MEdDX96TiuehrgUFyTF0N3lM7qliOoqY753IsEIUzIDmOq9qxU1kDRI1GXbhL1PsZREmDI4dqDzLHgnSVY5o4NIAU86FmyfyY15wilbOsCWTKBMpbu1zb7MXOOsV1X03DzgRDVRiL0KGyoN9rAnTAZ8bc3bsZW1p6bfI4gx4Z1XvksPYXJN_w0eCwo34U8rq2tmOmWEH-Dd7PsedDSrlsH0QyOpVccFX8J_5_XIBTDBm4sp9vzIVY6IciVXof7ZNeyIyi4xEoUgt7rODpE5DrOt53qrH8P1qxBXtZok\",\"p\":\"8Wg2lf5O-J5wESHAaJqFfztZgP8snXtbgz7meae4wtRvk2g03_3AlbtK0C2cXa2Ir_XuH1XmPyVlgUAM5RI1Diql9mkro1rbgZyVKLf9CVX1wkmDUHh9PbOCXd4ljS_BBOxspZyxLne8OeCSq6n7k2fF3dC9lTDFT-vsLWSDKy7HlUsmOP2bwkdKjTKldEaM38JN8hXb_C-Ka2LO6r7Xvi2r8Aqlu2Y2v7dGGbWRXnFLel_WzaA3h-ZnnO0MWH04LmXIeoW58wfNE3zJGqCDl_zf5tQZ9Kh-xSmoJwzZufilNPRSKcbkCtUFjC8J-UfwZ6c2mEGKyTBgja02AC7aSQ\",\"q\":\"xKN-E3so26DBcyKCnxbICptngikECvkLIIHq3WfKMkmRlFlUjNT1nrEHyqilFnrR-18f2AjMx-M49rD1-yixQR4Tqp8wfHDllxM0xW8lyCmP15CFug-Ccr005oPmXoSB542ugXydqGa7HpK6UQ-fWF4cYjHNsmaFZsZTRpRrik6t_W7LLIgIDQV50qNRtUenGPjS8AoryMEFjDnQ4K-jJBuStu-VjQn4CwlNw5mt0sYc0xwkZAF1hEgq_wsZ4DsDbzo7kOtcS8JQW9MOTtNRLzcZeRjkFg0HIp2jHx0JRFYuBoPKcvldH-pb927JxYvR3oWuONpy4vQmu09PyHgqQQ\",\"qi\":\"5K4W0rbjQH79zk_SsMZYJ9aM_u1AMeNDLfoSkAUWraJxlZV8WvYONUTi6OnJ3ml3yXimeD_HY0pAmFKrRiX3FLohrfNVppBmAoc52oLQ6CwqR2YRGOXF8FPMRQuGsInv6qBquXi87YWb-KIbMMzFG6JL0AvIHet8SYWrbKg_Hj7QgoqJat4VzYnK7daYCA0IPBBKuP3PCjyvRXhCXR5_5GnnV22daGNucI4kfcR3O5MH4lnBp4TnsxOM8hrJ4If-ASE22c_zpTs8tTPXLF7hxXs6UihNSVAVcYcJ6rNuHUF_Spjp3ldBACs-09z6Lj44M6iR6PdYRGYjgjJ52b8VnA\"}\n",
-      "200\n",
-      "b'JWK REGISTERED'\n"
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/interactiveshell.py\", line 3550, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/var/folders/0h/0jwr22yn0tg_r856qtr6n22m002364/T/ipykernel_15498/322333104.py\", line 8, in <module>\n",
+      "    key.update({\"alg\", alg})\n",
+      "  File \"/opt/homebrew/lib/python3.11/site-packages/jwcrypto/jwk.py\", line 1179, in update\n",
+      "    for k, v in dict(*args, **kwargs).items():\n",
+      "                ^^^^^^^^^^^^^^^^^^^^^\n",
+      "ValueError: dictionary update sequence element #0 has length 5; 2 is required\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/interactiveshell.py\", line 2144, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 1088, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 970, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/core.py\", line 677, in included_pieces\n",
+      "    scope_pieces = self.scope_pieces\n",
+      "                   ^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/core.py\", line 614, in scope_pieces\n",
+      "    scope_start, scope_end = self.source.line_range(self.scope)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/stack_data/core.py\", line 178, in line_range\n",
+      "    return line_range(self.asttext(), node)\n",
+      "                      ^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/executing/executing.py\", line 333, in asttext\n",
+      "    self._asttext = ASTText(self.text, tree=self.tree, filename=self.filename)\n",
+      "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/asttokens/asttokens.py\", line 305, in __init__\n",
+      "    super(ASTText, self).__init__(source_text, filename)\n",
+      "  File \"/Users/cjh15/Library/Python/3.11/lib/python/site-packages/asttokens/asttokens.py\", line 47, in __init__\n",
+      "    source_text = six.ensure_text(source_text)\n",
+      "                  ^^^^^^^^^^^^^^^\n",
+      "AttributeError: module 'six' has no attribute 'ensure_text'\n"
      ]
     }
    ],
+   "source": [
+    "from jwcrypto import jwk\n",
+    "headers={\"Content-Type\": \"application/json\"}\n",
+    "alg = \"ES256\"\n",
+    "with open(\"ES256.key\", \"rb\") as pemfile: \n",
+    "    key = jwk.JWK.from_pem(pemfile.read())\n",
+    "# key.update({\"use\", \"sig\"})\n",
+    "# key.update({\"kid\", \"Connectathon\"})\n",
+    "key.update({\"alg\", alg})\n",
+    "# key.update()\n",
+    "pvk = key.export_private()\n",
+    "# pvk[\"alg\"] = alg\n",
+    "\n",
+    "print(pvk)\n",
+    "\n",
+    "jwt_headers = {\"alg\":alg, \"kid\":key.get(\"kid\"), \"typ\":\"JWT\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import requests\n",
     "import jwt\n",
@@ -31,21 +115,22 @@
     "baseUrl = \"http://localhost:8080/iis\"\n",
     "tenant = \"Connectathon\"\n",
     "fhirUrl = baseUrl + \"/fhir/\" + tenant\n",
-    "session = requests.Session()\n",
+    "# session = requests.Session()\n",
     "headers={\"Content-Type\": \"application/json\"}\n",
-    "alg = \"RS384\"\n",
-    "config = session.get(baseUrl + \"/.well-known/smart-configuration\")\n",
-    "print(config.text)\n",
+    "al\n",
+    "g = \"RS384\"\n",
+    "# config = session.get(baseUrl + \"/.well-known/smart-configuration\")\n",
+    "# print(config.text)\n",
     "# Use following command to generate private key\n",
     "# ssh-keygen -t rsa -b 4096 -E SHA384 -m PEM -P \"\" -f RS384.key\n",
     "with open(\"RS384.key\", \"rb\") as pemfile: \n",
     "    key = jwk.JWK.from_pem(pemfile.read())\n",
     "# key.update({\"kid\", \"Connectathon\"})\n",
-    "print(key)\n",
+    "# print(key)\n",
     "print(key.export_private())\n",
-    "register = session.post(f\"{baseUrl}/registerClient\", data=key.export_public())\n",
-    "print(register.status_code)\n",
-    "print(register.content)"
+    "# register = session.post(f\"{baseUrl}/registerClient\", data=key.export_public())\n",
+    "# print(register.status_code)\n",
+    "# print(register.content)"
    ]
   },
   {
